syntax = "proto3";

package transaction;

option go_package = "bank_micro/gen";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

// TransactionService manages financial transaction records and history.
service TransactionService {
  // ReadAll retrieves transaction records, optionally filtered by account IDs.
  rpc ReadAll(ReadAllRequest) returns (ReadAllResponse) {
    option (google.api.http) = {
      get: "/api/transaction/read"
      // Query parametreleri otomatik eşleşir (e.g. ?account_id=abc)
    };
  }
}

// TransactionResponse represents a single transaction record details.
message TransactionResponse {
  string                    id               = 1;
  string                    account_id       = 2;
  string                    to_account_id    = 3;
  int64                     amount           = 4;
  string                    transaction_type = 5;
  google.protobuf.Timestamp created_at       = 6;
}

// ReadAllRequest provides filtering options for listing transactions.
message ReadAllRequest {
  string account_id    = 1;
  string to_account_id = 2;
}

// ReadAllResponse contains a collection of transactions.
message ReadAllResponse {
  repeated TransactionResponse transactions = 1;
}